chunk and index renderer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,16 @@ add_executable(vulkan_guide
     vk_initializers.h
     sdl_utils.h
     vk_mesh.h
-    vk_mesh.cpp)
+    vk_mesh.cpp
+    camera.h
+    camera.cpp
+    world.h
+    world.cpp
+    random.h
+    chunk.h
+    chunk.cpp
+    block.h
+    block.cpp)
 
 
 set_property(TARGET vulkan_guide PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:vulkan_guide>")
