--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,6 @@ set_property(TARGET vulkan_guide PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGE
 target_include_directories(vulkan_guide PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 target_link_libraries(vulkan_guide vkbootstrap vma glm tinyobjloader imgui stb_image fmt)
 
-target_link_libraries(vulkan_guide Vulkan::Vulkan sdl2)
+target_link_libraries(vulkan_guide Vulkan::Vulkan sdl2 FastNoise)
 
 add_dependencies(vulkan_guide Shaders)
