--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,5 +107,6 @@
         "numeric": "cpp",
         "regex": "cpp",
         "valarray": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
