--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,19 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": []
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Launch Vulkan Guide",
+      "type": "lldb",
+      "request": "launch",
+      "program": "${workspaceFolder}/bin/vulkan_guide",
+      "args": [],
+      "cwd": "${workspaceFolder}",
+      "environment": [
+        {
+          "name": "DYLD_LIBRARY_PATH",
+          "value": "/usr/local/lib"
+        }
+      ]
+    }
+  ]
 }
