finally got safety in multi-threaded chunk renderer... and simplicity

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,15 +52,15 @@ add_executable(vulkan_guide
     render/scene_renderer.cpp
     render/render_queue.h
     render/render_queue.cpp
-        render/resource.cpp
-        render/resource.h
+    render/resource.cpp
+    render/resource.h
 )
 
 
 set_property(TARGET vulkan_guide PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:vulkan_guide>")
 
 target_include_directories(vulkan_guide PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-target_link_libraries(vulkan_guide vkbootstrap vma glm tinyobjloader imgui stb_image fmt)
+target_link_libraries(vulkan_guide vkbootstrap libcuckoo vma glm tinyobjloader imgui stb_image fmt)
 
 target_link_libraries(vulkan_guide Vulkan::Vulkan sdl2 FastNoise TracyClient)
 
