--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third_party/tracy"]
 	path = third_party/tracy
 	url = https://github.com/wolfpld/tracy.git
+[submodule "third_party/libcuckoo"]
+	path = third_party/libcuckoo
+	url = git@github.com:efficient/libcuckoo.git
