workign on improvements

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,8 +51,7 @@ add_executable(vulkan_guide
     render/scene_renderer.h
     render/scene_renderer.cpp
     render/render_queue.h
-    render/render_queue.cpp
-    render/resource.cpp
+        render/resource.cpp
     render/resource.h
 )
 
@@ -60,8 +59,10 @@ add_executable(vulkan_guide
 set_property(TARGET vulkan_guide PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:vulkan_guide>")
 
 target_include_directories(vulkan_guide PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-target_link_libraries(vulkan_guide vkbootstrap libcuckoo vma glm tinyobjloader imgui stb_image)
-
+target_link_libraries(vulkan_guide vkbootstrap libcuckoo vma glm tinyobjloader imgui spirv_reflect stb_image)
 target_link_libraries(vulkan_guide Vulkan::Vulkan sdl2 FastNoise TracyClient)
+
+target_compile_options(vulkan_guide PRIVATE -fsanitize=address,undefined -fno-omit-frame-pointer)
+target_link_options(vulkan_guide PRIVATE -fsanitize=address,undefined)
 
 add_dependencies(vulkan_guide Shaders)
