raii pattern for chunk objects.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,6 +53,8 @@ add_executable(vulkan_guide
     render/render_queue.h
         render/resource.cpp
     render/resource.h
+        world/chunk_cache.cpp
+        world/chunk_cache.h
 )
 
 
@@ -62,7 +64,7 @@ target_include_directories(vulkan_guide PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 target_link_libraries(vulkan_guide vkbootstrap libcuckoo vma glm tinyobjloader imgui spirv_reflect stb_image)
 target_link_libraries(vulkan_guide Vulkan::Vulkan sdl2 FastNoise TracyClient)
 
-target_compile_options(vulkan_guide PRIVATE -fsanitize=address,undefined -fno-omit-frame-pointer)
-target_link_options(vulkan_guide PRIVATE -fsanitize=address,undefined)
+target_compile_options(vulkan_guide PRIVATE)
+target_link_options(vulkan_guide PRIVATE)
 
 add_dependencies(vulkan_guide Shaders)
