chunk ring pool working... need to investigate thread issues next

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,6 +60,8 @@ add_executable(vulkan_guide
         components/player_input_component.h
         components/game_object.h
         components/component.h
+        world/chunk_queue.cpp
+        world/chunk_queue.h
 )
 
 
