--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -85,3 +85,10 @@ target_compile_options(vulkan_guide PRIVATE)
 target_link_options(vulkan_guide PRIVATE)
 
 add_dependencies(vulkan_guide Shaders)
+
+
+add_custom_command(TARGET vulkan_guide POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_directory
+	"${CMAKE_SOURCE_DIR}/shaders"
+	"$<TARGET_FILE_DIR:vulkan_guide>/shaders"
+)
